<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color"
    tools:context=".ui.phone.PhoneFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editPhone"
            android:hint="@string/please_add_your_number"
            android:layout_marginTop="55dp"
            android:background="@drawable/edit_design"
            android:inputType="phone"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:elevation="1dp"
            android:paddingLeft="25dp"
            android:textColorHint="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginTop="118dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_design"
            android:text="@string/send"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editOTP"
            android:hint="@string/codeOPT"
            android:layout_marginTop="55dp"
            android:background="@drawable/edit_design"
            android:inputType="phone"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:elevation="1dp"
            android:paddingLeft="25dp"
            android:textColorHint="@color/gray"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginTop="118dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_design"
            android:text="@string/verify"
            android:visibility="gone"
            android:textColor="@color/white" />

    </FrameLayout>

</LinearLayout>