<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appnote.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.appnote.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.appnote.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.example.appnote.NoteFragment"
        android:label="Form fragment"
        tools:layout="@layout/fragment_form" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.appnote.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/boardFragment"
        android:name="com.example.appnote.ui.onBoard.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />
    <fragment
        android:id="@+id/editText2"
        android:name="com.example.appnote.ui.profile.FormEdit"
        android:label="Edit form"
        tools:layout="@layout/fragment_edit_text" />
    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.example.appnote.ui.phone.PhoneFragment"
        android:label="Verify"
        tools:layout="@layout/fragment_phone" />
</navigation>